# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  maarittelydokumentti.md  testaus.md  tuntikirjanpito.md
laskarit/laskarit_viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/laskarit_viikko2/unicafe/src/tests/: kassapaate_test.py
laskarit/laskarit_viikko3/: monopoli.md  sekvenssikaavio.md
laskarit_viikko2/maksukortti/: pyproject.toml
laskarit_viikko2/unicafe/src/tests/: maksukortti_test.py
minesweeper/: .coveragerc  board.py  database.py  game.py  main.py  piece.py  pyproject.toml  tasks.py
minesweeper/tests/: test_board.py  test_database.py  test_piece.py
