[project]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = [
    {name = "OtsoH",email = "otsoheinamaki@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
pytest = "^8.3.5"

